--- a/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
@@ -299,6 +299,9 @@ min-height:36px;
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
               <property name="text">
                <string>Cloud Drive</string>
               </property>
@@ -479,6 +482,9 @@ min-height:36px;
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
               <property name="text">
                <string>Incoming Shares</string>
               </property>
@@ -531,6 +537,9 @@ min-height:36px;
              <widget class="QPushButton" name="bRubbish">
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="acceptDrops">
+               <bool>false</bool>
               </property>
               <property name="text">
                <string>Rubbish</string>
