--- a/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
@@ -286,6 +286,9 @@ min-height:40px;
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
               <property name="text">
                <string>Cloud Drive</string>
               </property>
@@ -472,6 +475,9 @@ min-height:40px;
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
               <property name="text">
                <string>Incoming Shares</string>
               </property>
@@ -530,6 +536,9 @@ min-height:40px;
               </property>
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="acceptDrops">
+               <bool>true</bool>
               </property>
               <property name="text">
                <string>Rubbish Bin</string>
@@ -712,7 +721,7 @@ padding-right:1px;
   </layout>
  </widget>
  <resources>
-  <include location="../../../Resources_win.qrc"/>win.qrc
+  <include location="../../../Resources_win.qrc"/>
  </resources>
  <connections/>
  <buttongroups>
