--- a/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
@@ -539,7 +539,7 @@ min-height:36px;
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="acceptDrops">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="text">
                <string>Rubbish</string>
