--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -36,6 +36,8 @@
         <file>images/qml/onboarding/shield_account_proIII.svg</file>
         <file>images/qml/onboarding/twofa.png</file>
         <file>images/qml/onboarding/mail.svg</file>
+        <file>images/qml/device_center/addbackup.svg</file>
+        <file>images/qml/device_center/addsync.svg</file>
         <file>images/qml/ok.png</file>
         <file>images/qml/ok@2x.png</file>
         <file>images/qml/ok@3x.png</file>
