--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -175,6 +175,7 @@
         <file>deviceCenter/qmldir</file>
         <file>deviceCenter/LeftSidebar.qml</file>
         <file>deviceCenter/Toolbar.qml</file>
+        <file>deviceCenter/ToolbarButton.qml</file>
         <file>deviceCenter/DevicePage.qml</file>
         <file>deviceCenter/DevicePageHeader.qml</file>
         <file>deviceCenter/DevicePageContent.qml</file>
