Update mega image in the notification.

--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -11,6 +11,7 @@
         <file>images/app_128@2x.png</file>
         <file>images/app_64.png</file>
         <file>images/app_64@2x.png</file>
+        <file>images/app_64@3x.png</file>
         <file>images/app_ico.ico</file>
         <file>images/arrow-to-left.png</file>
         <file>images/arrow-to-left@2x.png</file>
