--- a/src/MEGASync/gui/linux/InfoDialog.ui
+++ b/src/MEGASync/gui/linux/InfoDialog.ui
@@ -3753,6 +3753,9 @@ border: none;
                  <property name="cursor">
                   <cursorShape>PointingHandCursor</cursorShape>
                  </property>
+                 <property name="toolTip">
+                  <string>Open Cloud Drive</string>
+                 </property>
                  <property name="text">
                   <string/>
                  </property>
