--- a/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
@@ -290,7 +290,7 @@ min-height:40px;
                <bool>true</bool>
               </property>
               <property name="text">
-               <string>Cloud Drive</string>
+               <string notr="true">Cloud Drive</string>
               </property>
               <property name="icon">
                <iconset theme="cloud_ico" resource="../../../Resources_win.qrc">
@@ -380,7 +380,7 @@ min-height:40px;
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="text">
-               <string>Backups</string>
+               <string notr="true">Backups</string>
               </property>
               <property name="icon">
                <iconset theme="backups_ico" resource="../../../Resources_win.qrc">
@@ -479,7 +479,7 @@ min-height:40px;
                <bool>true</bool>
               </property>
               <property name="text">
-               <string>Incoming Shares</string>
+               <string notr="true">Incoming Shares</string>
               </property>
               <property name="icon">
                <iconset resource="../../../Resources_win.qrc">
@@ -541,7 +541,7 @@ min-height:40px;
                <bool>true</bool>
               </property>
               <property name="text">
-               <string>Rubbish Bin</string>
+               <string notr="true">Rubbish bin</string>
               </property>
               <property name="icon">
                <iconset resource="../../../Resources_win.qrc">
