--- a/src/MEGASync/syncs/gui/Backups/linux/RemoveBackupDialog.ui
+++ b/src/MEGASync/syncs/gui/Backups/linux/RemoveBackupDialog.ui
@@ -20,17 +20,22 @@
    <string>Stop backup</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QDialog{
-background-color:#ECECEC;
+   <string notr="true">#lTitle
+{
+font-weight: 600;
+font-size:16px;
 }
 
-QRadioButton::indicator{
-width: 13px;
-height: 13px;
-}
-QLabel
+#rMoveFolder, #rDeleteFolder
 {
-font-family:Lato Regular;
+font-weight: 600;
+font-size:14px;
+}
+
+#lDeleteFolder, #lMoveFolder
+{
+font-weight: 400;
+font-size:12px;
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -51,13 +56,6 @@ font-family:Lato Regular;
    </property>
    <item>
     <widget class="QLabel" name="lTitle">
-     <property name="styleSheet">
-      <string notr="true">QLabel{
-font-family: SF Pro Text Regular;
-font-size:16px;
-color:#333333;
-}</string>
-     </property>
      <property name="text">
       <string>Stop backing up folder?</string>
      </property>
@@ -65,12 +63,6 @@ color:#333333;
    </item>
    <item>
     <widget class="QLabel" name="lSecondaryText">
-     <property name="styleSheet">
-      <string notr="true">QLabel{
-font-size:12px;
-color:#666666;
-}</string>
-     </property>
      <property name="text">
       <string>To stop backing up this folder, you need to either move it or delete it.</string>
      </property>
@@ -95,13 +87,6 @@ color:#666666;
      </property>
      <item>
       <widget class="QRadioButton" name="rMoveFolder">
-       <property name="styleSheet">
-        <string notr="true">*{
-font-family:Lato Medium;
-font-size:14px;
-color:#111111;
-}</string>
-       </property>
        <property name="text">
         <string>Move folder</string>
        </property>
@@ -114,13 +99,6 @@ color:#111111;
          <width>0</width>
          <height>0</height>
         </size>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLabel{
-font-size:11px;
-color: #333333;
-padding-left:15px;
-}</string>
        </property>
        <property name="text">
         <string>Move this folder from backups to another location in your cloud drive to get full access to your data. This folder will stop being backed up.</string>
@@ -181,20 +159,14 @@ color: rgba(0, 0, 0, 0.2)
           <property name="bottomMargin">
            <number>0</number>
           </property>
-          <item alignment="Qt::AlignVCenter">
+          <item alignment="Qt::AlignmentFlag::AlignVCenter">
            <widget class="QLabel" name="label_5">
-            <property name="styleSheet">
-             <string notr="true">QLabel{
-font-family:SF Pro Regular;
-font-size:13px;
-}</string>
-            </property>
             <property name="text">
              <string>Move to:</string>
             </property>
            </widget>
           </item>
-          <item alignment="Qt::AlignVCenter">
+          <item alignment="Qt::AlignmentFlag::AlignVCenter">
            <widget class="QLineEdit" name="lTarget">
             <property name="minimumSize">
              <size>
@@ -208,18 +180,12 @@ font-size:13px;
               <height>20</height>
              </size>
             </property>
-            <property name="styleSheet">
-             <string notr="true">QLineEdit{
-font-family:SF NS Display Regular;
-font-size:13px;
-}</string>
-            </property>
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item alignment="Qt::AlignVCenter">
+          <item alignment="Qt::AlignmentFlag::AlignVCenter">
            <widget class="QPushButton" name="bChange">
             <property name="minimumSize">
              <size>
@@ -246,10 +212,10 @@ font-size:13px;
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
+        <enum>QSizePolicy::Policy::Fixed</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -261,27 +227,16 @@ font-size:13px;
      </item>
      <item>
       <widget class="QRadioButton" name="rDeleteFolder">
-       <property name="styleSheet">
-        <string notr="true">*{
-font-family:Lato Medium;
-font-size:14px;
-color:#111111;
-}</string>
-       </property>
        <property name="text">
         <string>Delete folder permanently</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="lDeleteFolder">
-       <property name="styleSheet">
-        <string notr="true">QLabel{
-font-size:11px;
-color: #333333;
-padding-left:15px;
-}</string>
-       </property>
        <property name="text">
         <string>Folder will be deleted from MEGA. It won't be deleted from your computer. This action cannot be undone.</string>
        </property>
@@ -293,7 +248,7 @@ padding-left:15px;
      <item>
       <spacer name="verticalSpacer_2">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -307,16 +262,11 @@ padding-left:15px;
    </item>
    <item>
     <widget class="Line" name="line">
-     <property name="styleSheet">
-      <string notr="true">QFrame{
-color:rgba(0,0,0,0.1);
-}</string>
-     </property>
      <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Shadow::Plain</enum>
      </property>
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -331,7 +281,7 @@ color:rgba(0,0,0,0.1);
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
