--- a/src/MEGASync/syncs/gui/Twoways/linux/RemoveSyncConfirmationDialog.ui
+++ b/src/MEGASync/syncs/gui/Twoways/linux/RemoveSyncConfirmationDialog.ui
@@ -7,47 +7,55 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>204</height>
+    <height>176</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>600</width>
-    <height>204</height>
+    <height>176</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>600</width>
-    <height>204</height>
+    <height>176</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Remove this sync?</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget::title 
-{
-    width: 600px;
-    height: 204px;
-    display: flex;
-    padding: 3px 10px;
-    justify-content: center;
-    align-items: center;
-    flex: 1 0 0;
-}
-
-#bOK
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
+   <string notr="true">/*ColorTokenIcon;Button;bRemove;normal;off;colorToken.text-inverse-accent*/
+/*ColorTokenIcon;Button;bRemove;disabled;off;colorToken.text-inverse-accent*/
+/*ColorTokenIcon;Button;bRemove;active;off;colorToken.text-inverse-accent*/
+/*ColorTokenIcon;Button;bRemove;selected;off;colorToken.text-inverse-accent*/
 
 #labelFolderIcon
 {
 border-image: url(&quot;:/images/icons/folder/synced-folder.png&quot;);
 max-width: 96px;
 max-height: 96px;
+}
+
+#bRemove
+{
+color: #04101E; /*colorToken.text-inverse-accent*/
+background-color:  #F4F4F5; /*colorToken.button-primary*/
+}
+
+#labelHeader
+{
+	/* Layout */
+	align-self: stretch;
+
+    /* Label 2/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    max-width: 432px;
 }
 
 #labelMessage
@@ -67,18 +75,13 @@ max-height: 96px;
     white-space: pre-wrap;
 }
 
-#labelHeader
+QPushButton
 {
-	/* Layout */
-	align-self: stretch;
-
-	/* Label 2/Semibold */
     font-family: Inter;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 600;
-    line-height: 24px;
-    max-width: 432px;
+    line-height: 20px;
 }</string>
   </property>
   <widget class="QLabel" name="labelFolderIcon">
@@ -98,7 +101,7 @@ max-height: 96px;
    <property name="geometry">
     <rect>
      <x>144</x>
-     <y>36</y>
+     <y>24</y>
      <width>432</width>
      <height>24</height>
     </rect>
@@ -114,7 +117,7 @@ max-height: 96px;
    <property name="geometry">
     <rect>
      <x>144</x>
-     <y>68</y>
+     <y>56</y>
      <width>432</width>
      <height>36</height>
     </rect>
@@ -129,9 +132,9 @@ max-height: 96px;
   <widget class="QPushButton" name="bCancel">
    <property name="geometry">
     <rect>
-     <x>422</x>
-     <y>144</y>
-     <width>72</width>
+     <x>377</x>
+     <y>116</y>
+     <width>80</width>
      <height>36</height>
     </rect>
    </property>
@@ -140,6 +143,12 @@ max-height: 96px;
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>80</width>
+     <height>36</height>
+    </size>
    </property>
    <property name="maximumSize">
     <size>
@@ -156,13 +165,16 @@ max-height: 96px;
    <property name="text">
     <string>Cancel</string>
    </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
   </widget>
-  <widget class="QPushButton" name="bOK">
+  <widget class="QPushButton" name="bRemove">
    <property name="geometry">
     <rect>
-     <x>499</x>
-     <y>144</y>
-     <width>77</width>
+     <x>470</x>
+     <y>116</y>
+     <width>111</width>
      <height>36</height>
     </rect>
    </property>
@@ -171,6 +183,12 @@ max-height: 96px;
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>111</width>
+     <height>36</height>
+    </size>
    </property>
    <property name="maximumSize">
     <size>
@@ -184,9 +202,15 @@ max-height: 96px;
    <property name="text">
     <string>Remove</string>
    </property>
+   <property name="icon">
+    <iconset resource="../../../../gui/Resources.qrc">
+     <normaloff>:/images/x.svg</normaloff>:/images/x.svg</iconset>
+   </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../../../gui/Resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>bCancel</sender>
