--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -98,5 +98,8 @@
         <file>images/qml/check_circle_filled.svg</file>
         <file>images/qml/syncs/selective_sync.svg</file>
         <file>images/qml/syncs/full_sync.svg</file>
+        <file>images/qml/device_center/backup_folder.svg</file>
+        <file>images/qml/device_center/sync_folder.svg</file>
+        <file>images/qml/three_dots.svg</file>
     </qresource>
 </RCC>
